syntax = "proto3";
package proto;

option go_package="pkg/proto;proto";

message AppendEntiresReq{
    uint64 leader_term=1;
    string leader_id=2;
}
message AppendEtriesResp{
    uint64 term=1;
    bool success=2;
}
message RequestVoteReq{
    uint64 candidate_term=1;
    string candidate_id=2;
}
message RequestVoteResp{
    uint64 term=1;
    bool vote_granted=2;
}

service NodeService {
    rpc AppendEntires (AppendEntiresReq) returns(AppendEtriesResp);
    rpc RequestVote (RequestVoteReq) returns(RequestVoteResp);
} 
